<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="395dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/imagem_login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/txt_app"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="18dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/text_user"
        android:layout_width="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/nome"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:background="@drawable/bg_edittext_normal"
        app:layout_constraintBottom_toTopOf="@id/text_password"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/text_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/senha"
        android:imeOptions="actionDone"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:background="@drawable/bg_edittext_normal"
        app:layout_constraintBottom_toTopOf="@id/btn_entrar"
        android:layout_height="50dp" />


    <Button
        android:id="@+id/btn_entrar"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/esqueceu_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="30dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_button_normal"
        tools:ignore="MissingConstraints"
        />


    <TextView
        android:id="@+id/esqueceu_password"
        android:layout_width="match_parent"
        android:text="@string/esqueceu"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>